--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,13 @@ whx-nginx:
   ports:
     - "80:80"
   links:
-    - whx-mysql
+    - whx-mysql:db
   volumes:
-    - whxmail.com:/usr/share/nginx/html
-  expose:
-    - "80 443"
+    - $PWD/whxmail.com:/usr/share/nginx/html
+
 whx-mysql:
   image: whx/mysql
-  expose:
+  ports:
     - "3306"
   environment:
     - MYSQL_ROOT_PASSWORD=191908577
